k8s/labs/day41/ingress-test/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ingress-nginx-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ingress-nginx-demo

  template:
    metadata:
      labels:
        app: ingress-nginx-demo

    spec:
      containers:
      - name: nginx
        image: docker.m.daocloud.io/library/nginx:latest
        ports:
        - containerPort: 80
