k8s/labs/day41/ingress-test/nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ingress-nginx-demo-service

spec:
  selector:
    app: ingress-nginx-demo

  ports:
  - port: 80
    targetPort: 80
