k8s/labs/day41/ingress-test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: nginx-demo-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: nginx.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: ingress-nginx-demo-service

            port:

              number: 80
